--- a/pages/learn/storia_elettroacustica/analisi_della_musica_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica/analisi_della_musica_elettroacustica.html
@@ -90,7 +90,7 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                     Pochi concetti nella musica elettronica possono esser dati per scontati: fascia sonora, tessitura, impulso.
                     <br><br>
                     L’ascolto della musica elettroacustica e l’analisi di essa è percepita da noi in base a criteri di tipo gestaltico. Storia ed analisi divisa in 3 momenti (schema a farfalla):
@@ -140,7 +140,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-8">
-                    <p class="mbr-text mbr-fonts-style display-7">
+                    <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                       La musica elettronica ci pone dei problemi sul livello neutro. Mancanza di omogeneità, deve essere integrato. Cosa facciamo se non c'è il testo? La partitura nella musica elettronica è garanzia della consapevolezza del compositore. Partitura a posteriori fa parte del livello estesico. Se non c'è una partitura ce la dobbiamo creare. Grafizzazione momento fondamentale dell'analisi. Creazione di un sistema al limite valido anche solo per quel pezzo.
                       <br><br>
                       La grafizzazione è un atto cognitivo intellettuale, deve essere coerente. Atto analitico e di scelta, perché deciderai cosa inserire nella grafizzazione. Costruisci conoscenza. L'importante di quello che fai è che sia comprensibile.
