--- a/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
+++ b/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
@@ -90,7 +90,7 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                     Edgard Varèse, credeva che la musica si dovesse evolvere verso linguaggi nuovi, ma non riuscì ad espandere la sua idea compositiva e rimase al collagismo, realizzando però un’opera, il "Poeme Electronique", la quale presenta elementi di andamento Narrativo che lo rendono archetipico ed esemplare come brano della Storia della Musica Elettroacustica. Il Poeme è una composizione che venne realizzata per il padiglione Philips per l’expo del 1958 tenutasi a Bruxelles, venne scritta su 3 piste, e poi riportata su nastro traforato per la sincronizzazione con gli eventi visuali. Per l’ingresso del padiglione Xenakis realizzò Concret PH (concreto parabolico), ambiente sonoro mandato in loop che realizzava una prima “doccia elettronica” dello spettatore, il lavoro non veniva assolutamente considerato musica. Il progetto nacque dall'idea di LeCorbusier, il quale aveva come aiutante Xenakis.
                   </p>
                 </div>
@@ -112,7 +112,7 @@
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
                         <strong>Edgar Varese - Poeme Electronique (1958)</strong>
                     </h5>
-                    <p class="mbr-text mbr-fonts-style display-7">
+                    <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                       All'interno del Poeme troviamo delle voci, che sono musica ma anche realtà: voce atonale, frammento corale, frammento parlato/narrato.
                       <br><br>
                       Le caratteristiche che si evidenziano sono la scarsa polifonia, ed i suoni ripetuti identici, quasi a mo di segnale all'interno del brano, come la campana o appunto la voce, per chiarificare la successione degli eventi. (Elementi che rappresentano i brani di musica elettronica: 1. presenza di silenzi 2. presenza di suoni-segnale). Il Poeme rappresenta narrativamente un messaggio di progresso, di amicizia ed umanità, il percorso sonoro-narrativo è accostabile al percorso evolutivo dell’umanità, gli elementi acquistano senso dal contesto al contrario di Luc Ferrari, in cui i suoni sono ciò che sono. Per poter realizzare un’analisi del Poeme, bisognerebbe analizzare tutto il padiglione Philips, Varese definiva il padiglione “un padiglione in bottiglia”.                    </p>
@@ -137,7 +137,7 @@
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
                       <strong>Iannis Xenakis - Concret PH (1958)</strong>
                   </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                     In Concret PH Xenakis attraverso la concezione dei grani attua un’evoluzione molto lenta ma senza narrazione, Concret PH risulta nel contesto del padiglione Philips di una modernità straordinaria, ed anche se è possibile individuarlo solamente a posteriori, Xenakis, avendo un pezzo di “tappezzeria” da inserire, si è sentito libero di comporre qualcosa che inducesse il pubblico ad ascoltare, che lo inducesse a fermarsi ed a porre il pubblico in un clima acustico. Concret PH dunque non invecchierà mai, poiché preanuncia la stagione della granulazione, il procedere di Xenakis nel tempo acquisì un procedimento formale con la stocastica e la statistica, ed ha portato a risultati sonori simili da parte di altri autori solo negli anni ’80, con ad esempio Riverrun di Barry Truax.
                     </p>
               </div>
@@ -161,7 +161,7 @@
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
                       <strong>Barry Truax - Riverrun (1968)</strong>
                   </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                     Riverrun è uno dei brani simbolo del procedimento della granulazione e della creazione di massa, lo spettro che si realizza per Riverrun, diviene la partitura del brano (la sintesi granulare nasce per la realizzazione di suoni continui e sintesi vocale). Riverrun verifica la versatilità della sintesi granulare Truax, essendo canadese, riesce ad elaborare un brano assente da qualsiasi scrupolo della cultura europea (Varese non riuscendo a realizzare alcuni suoni obbiettivi, spesso li scrive, ad esempio, lui trova nell'elettronica uno strumento utile). Riverrun ha al suo interno anche una sorta di sentore narrativo, oltre ad essere un vero e proprio studio della granulazione.
                   </p>
               </div>
@@ -185,7 +185,7 @@
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
                       <strong>Luc Ferrari - Musique Promenade (1964-69)</strong>
                   </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                     Uno dei possibili esiti del concretismo, fu realizzata a partire da registrazioni di ambienti, marcia di soldati (visione anti-militarista), musica, voce , utilizzo del reverse, silenzio, banda musicale, strumenti in generale. I gesti schaefferiani della prima ora, li ritroviamo dai 5 studi sul rumore, tutti in questa composizione, con un intento di narrazione, abbiamo una musica che realizza un effetto molto visivo.
                     <br><br>
                     All'interno troviamo come materiale utilizzato: lunghe registrazioni di campo (fondali), brevi registrazioni, registrazioni di suoni indecifrabili, suoni elettronici.
@@ -213,7 +213,7 @@
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
                       <strong>Luc Ferrari - Presque Rien n1 (1971)</strong>
                   </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                     È una registrazione di un solo ambiente, rimanda alla classicità, un suono preso, staccato e riproposto sulla pellicola sonora, vi sono 4 di questi brani, di cui il più famoso è quello sulla spiaggia. Decide dunque di asportare il suono di una realtà. Registra i suoni di Presque Rien (quasi niente) Nº1 sulle coste del Mar Nero, la registrazione è effettuata con microfoni in vari punti.
                     <br><br>
                     Il brano è suddivisibile in tre parti della materia sonora: 1. introduzione e presentazione dei vari suoni 2. motore. 3. comparsa del canto (il canto detiene sempre una connotazione).
