--- a/pages/learn/storia_elettroacustica/john_chowning.html
+++ b/pages/learn/storia_elettroacustica/john_chowning.html
@@ -90,7 +90,7 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                     Turenas e Sabelithe hanno aspetti di sperimentazione, mentre Phonè è uno dei brani piú evoluti, Phonè è infatti un pezzo virtuosistico, mentre Stria sono 16 minuti di spettri senza accadimenti, pura disposizione di spettri che si accavallano, brano quasi totalmente aurale. Ad una prima analisi Chowning può sembrare solamente un tecnico, ma nasce come un compositore, non come Risset che nasce anche come fisico. Chowning viene scosso dalla chiamata dell’articolo di Mathews, e dalle possibilità quasi infinite. Uno dei primi aspetti che affronta Chowning è la spazializzazione del suono.
                   </p>
                 </div>
@@ -129,7 +129,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8">
-                <p class="mbr-text mbr-fonts-style display-7">
+                <p class="mbr-text mbr-fonts-style display-7" style="text-align:justify;">
                   L’FM rende possibile una cosa che le pratiche prima di essa non consentivano, come il catalogo di Risset.
                   <br><br>
                   Il ritorno sullo strumento ed il vibrato portato all’estremo, fece venire l’idea di base a Chowning, sintesi FM su strumento ad es. vibrato su violino a 200Hz.
