--- a/pages/learn/storia_elettroacustica/confronto_berio_stockhausen.html
+++ b/pages/learn/storia_elettroacustica/confronto_berio_stockhausen.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Leggi della Gestalt</title>
+  <title>Confronto Berio - Stockhausen</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Leggi della Gestalt</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Confronto Berio - Stockhausen</strong></h4>
             </div>
         </div>
     </div>
@@ -86,14 +86,24 @@
 
 
   <!-- Text-->
-
-
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Dopo la seconda guerra Mondiale in Germania avviene un tentativo di recupero del primato culturale che porta a:
+                    <ol>
+                    <li>Valorizzazione dello studio di Colonia</li>
+                    <li>Istituzione dei corsi estivi di Darmstadt</li>
+                    <li>Corsi estivi compositivi di Berlino</li>
+                    </ol>
+                    </p>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Vennero inoltre erogate borse di studio per studiare a Berlino Ovest, da dove arrivarono gli americani finiti a Roma gli anni seguenti (Curran). L’iniziativa della costituzione dello Studio di Fonologia di Milano, va dunque individuata nel desiderio di ripristinare una credibilità ed immagine culturale a livello internazionale.
+                      <br><br>
+                      Mentre Maderna realizzava i suoi 3 pezzi fondamentali (poi anche Quadrivium), Luciano_Berio allievo di Dalla Piccola e più giovane di Maderna, compositore più che direttore (Maderna), che nasceva dal serialismo, scopre la musica elettronica e realizza Thema: Omaggio a Joyce (1958), interesse nei valori fonici della parola.
+                      <br><br>
+                      Nello stesso triennio 1956-1958, sono da individuare molte opere di riferimento della musica elettronica:
                   </p>
                 </div>
             </div>
@@ -107,15 +117,15 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/nffOJXcJCDg" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
+                        <strong>Karlheinz Stockhausen - Gesang der Junglinge (1956)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
+                      Sperimentazione dell’elettronica con voce bianca.
                     </p>
                 </div>
             </div>
@@ -123,8 +133,95 @@
     </div>
 </section>
 
-<br>
-<br>
+
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Per Berio lo strumento elettronico diviene un mezzo più naturale per indagare i fenomeni musicali. L’elettronica in Thema è tutto poiché sono materiali registrati ed elaborati della voce di Cathy Berberian, sulla quale sperimenta, un po’ come Michiko Hyraiama per Scelsi.
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
+  <!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+    <div class="container">
+        <div class="title-wrapper mb-5">
+        </div>
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/jV_76OZSsqo" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                        <strong>Luciano Berio - Thema: Omaggio a Joyce (1958)</strong>
+                    </h5>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Cosa insegna Thema al compositore in fase di apprendistato:
+                      <ul>
+                        <li>voce sempre presente</li>
+                        <li>a volte vi è intelligibilità del testo (inizio e fine)</li>
+                        <li>economia del materiale, utilizzo di silenzi (pieni e vuoti)</li>
+                        <li>lascia indipendenza alla voce</li>
+                        <li>significato va dalla frase al fonema</li>
+                      </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                    In Berio interessa la voce in quanto tale, come unità di timbro e parola, è una voce che si porta dietro anche tutte le sue caratteristiche secondarie. Nel confronto tra Berio e Stockhausen, Berio rinuncia alla voce come puro canto per addentrarsi nei valori fonici della voce. In Stock, invece la voce è canto, melodia. La voce in Berio non cede mai al veicolo puramente musicale, Stockhausen virtuosismo ed invenzione sonora inesauribile, al massimo della tecnologia del 1956. (oltre ad altre ragioni la voce bianca viene scelta per la freschezza della voce bianca che è ben più libera dal peso storico della musica precedente: il canto su un soprano o un’altra voce legato a una dimensione melodica avrebbe creato una contrapposizione forte. Soprattutto Stock era interessato in primo luogo alla ricerca musicale).
+                    <br><br>
+                    Per Maderna elettronica esperienza di 3 brani, per Nono esperienza di una vita, per Berio è un’esperienza fondamentale.
+                    <br><br>
+                    A Berio di cimentarsi col virtuosismo elettronico interessa poco. Mezzo elettronico sta lì a disposizione, con l'aiuto del tecnico.
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
+  <!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+    <div class="container">
+        <div class="title-wrapper mb-5">
+        </div>
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/UDTNEbAhrSc" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                        <strong>Luciano Berio - Visage (1961)</strong>
+                    </h5>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Altro brano per voce di Berio è Visage, commissionata per il Prix Italia, poi censurata poiché denominata pornografica. Evoluzione verso un parlato compiuto, storia del linguaggio, pezzo di bravura di Berberia è Thema, per via del maggiore interesse del contenuto, la figura dell’interprete prende un ruolo fondamentale. Visage è una sorta di storia del linguaggio dal mugolio alla parola compiuta.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<br><br>
 
 
 <!-- Prev/Next-->
