--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -120,7 +120,7 @@
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/de_natura_sonorum.html" class="text-primary"><b>Analisi - De Natura Sonorum</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html" class="text-primary"><b>Studio di Fonologia di Milano</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/bruno_maderna.html" class="text-primary"><b>Bruno Maderna</b></a></li>
-                      <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/confronto_berio_stockhausen.html" class="text-primary"><b>Confronto Berio - Stockhausen (coming soon)</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/confronto_berio_stockhausen.html" class="text-primary"><b>Confronto Berio - Stockhausen</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/luigi_nono.html" class="text-primary"><b>Luigi Nono (coming soon)</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/karlheinz_stockhausen.html" class="text-primary"><b>Karlheinz Stockhausen (coming soon)</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_prima_parte.html" class="text-primary"><b>Musica Digitale - Prima Parte</b></a></li>
