--- a/pages/learn/storia_elettroacustica/luigi_nono.html
+++ b/pages/learn/storia_elettroacustica/luigi_nono.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Leggi della Gestalt</title>
+  <title>Luigi Nono</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,27 +78,12 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Leggi della Gestalt</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Luigi Nono</strong></h4>
             </div>
         </div>
     </div>
 </section>
 
-
-  <!-- Text-->
-
-
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-
-                  </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
   <!-- Video-->
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
@@ -107,15 +92,15 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/8WAjjtNVVKg" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
+                        <strong>Luigi Nono - Omaggio a Vedova (1960)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
+                      Negli anni ’60 diviene protagonista allo Studio di Fonologia Luigi Nono la cui prima composizione allo studio è Omaggio a Vedova, che ci pone problemi interessanti dal punto di vista estetico e dell'autorialità, prima volta in cui Nono si confronta con il materiale elettronico. In questo primo brano è molto evidente che Nono non sappia dominare totalmente i materiali elettronici, ed in cui vede le possibilità dello strumento elettronico, via a un’espressione informale.
                     </p>
                 </div>
             </div>
@@ -123,8 +108,44 @@
     </div>
 </section>
 
-<br>
-<br>
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/w_fXHRXy7Xs" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Luigi Nono - Canto Sospeso (1956)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Capolavoro dello strutturalismo, brano seriale in cui i materiali vengono polverizzati in cellule melodiche distribuite in compagine strumentale e corale molto complessa e ricca, la comparsa di Emilio Vedova per Nono, lo porta verso la materia del suono, e l’elettronica diviene strumento di indagine del suono.
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Luigi Nono fu genero di Schoenberg, e dunque apprese ed apprezzo da lui una forte impronta formale.
+                  <br><br>
+                  Nell'Omaggio a Emilio Vedova, si sente molto il condizionamento della materia e dello strumentario dello Studio e rispetto a Continuo di Maderna si avvertono dei passi indietro (taglio netto del nastro, idea elencativa delle possibilità sonore) ma è il primo esperimento di Nono sull'elettronica, ed è capibile dall'ascolto dei Cori di Didone del 1958 con testi tratti da Ungaretti (Ungaretti accademico d’Italia durante il fascismo, Nono comunista), i cori sono molto vicini alle opere 29 e 31 di Webern.
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
 
 
 <!-- Prev/Next-->
