--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -125,7 +125,7 @@
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/luigi_nono_periodo_politicizzato.html" class="text-primary"><b>Luigi Nono - Periodo Politicizzato</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/luigi_nono_negli_anni_70.html" class="text-primary"><b>Luigi Nono - Negli anni ’70</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/luigi_nono_dal_1980_circa.html" class="text-primary"><b>Luigi Nono - Dal 1980 circa</b></a></li>
-                      <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/karlheinz_stockhausen.html" class="text-primary"><b>Karlheinz Stockhausen (coming soon)</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/karlheinz_stockhausen.html" class="text-primary"><b>Karlheinz Stockhausen</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_prima_parte.html" class="text-primary"><b>Musica Digitale - Prima Parte</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/jean_claude_risset.html" class="text-primary"><b>Jean-Claude Risset</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/john_chowning.html" class="text-primary"><b>John Chowning</b></a></li>
