--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <div class="iconfont-wrapper">
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
                         </div>
-                        <h5 class="card-title mbr-fonts-style display-7"><strong>Live Sound Engeneering</strong></h5>
+                        <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Live Sound Engeneering</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">With the care of timbre, dynamics and space, I have gained hundreds of hours of concerts of all kinds: from classical to contemporary music, from folk to jazz.<br><br>The next one is just a surprise and we will turn it into an experience!&nbsp;<br></p>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                         <div class="iconfont-wrapper">
                             <span class="mbr-iconfont mobi-mbri-responsive-2 mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
                         </div>
-                        <h5 class="card-title mbr-fonts-style display-7"><strong>Art Installations</strong></h5>
+                        <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Art Installations</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical technical assistant for artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical and international promoter of contemporary art and science of Rome.&nbsp;<br></p>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
                         <div class="iconfont-wrapper">
                             <span class="mbr-iconfont mobi-mbri-website-theme-2 mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
                         </div>
-                        <h5 class="card-title mbr-fonts-style display-7"><strong>Instruments Developement</strong></h5>
+                        <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Instruments Developement</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.<br><br>Check out my latest projects!&nbsp;<br></p>
                     </div>
                 </div>
