--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -282,6 +282,10 @@
                             <ul>
                             <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_prima_parte.html#content5-1d" title="content5-1d">Computer Music</a></li>
                             <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/jean_claude_risset.html">Musica Digitale</a></li>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/.html">Silenzio</a></li>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/.html">Struttura formale</a></li>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/.html">Ripetizione - Variazione</a></li>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/.html">Suonoforma</a></li>
                             </ul>
                           </h5>
                       </div>
@@ -296,6 +300,8 @@
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/.maxpat">Inputs</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/.maxpat">Panning</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/random.maxpat">Random</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/maschera_di_tendanza.maxpat">Maschera di tendenza</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/week_2.maxpat">Week 2 - patch riassuntiva</a></li>
