--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>HELLO, WORLD!</strong></h1>
-                <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-1"><strong>I'm Gabriela Velitch.</strong></h2>
-                <p class="mbr-text mbr-fonts-style mb-3 display-5">| AV TECHNICIAN&nbsp; |&nbsp; ELECTROACOUSTIC COMPOSER&nbsp; |&nbsp; SOUND DESIGNER&nbsp; |</p>
+                <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-1" style="text-align:center;"><strong>I'm Gabriela Velitch.</strong></h2>
+                <p class="mbr-text mbr-fonts-style mb-3 display-5" style="text-align:center;">| AV TECHNICIAN&nbsp; |&nbsp; ELECTROACOUSTIC COMPOSER&nbsp; |&nbsp; SOUND DESIGNER&nbsp; |</p>
 
                 <div class="social-row display-7 mt-5" style="text-align:center;">
                     <div class="soc-item">
