--- a/pages/projects.html
+++ b/pages/projects.html
@@ -96,9 +96,9 @@
                     <div class="row">
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
-                                <h5 class="card-title mbr-fonts-style display-5">
+                                <h5 class="card-title mbr-fonts-style display-5" style="text-align:left;">
                                     <strong>corkino</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">Ultra-portable all-in-one MaxMSP controller<br></p>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4" style="text-align:justify;">Ultra-portable all-in-one MaxMSP controller<br></p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/projects/corkino.html" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
@@ -115,9 +115,9 @@
                     <div class="row">
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
-                                <h5 class="card-title mbr-fonts-style display-5">
+                                <h5 class="card-title mbr-fonts-style display-5" style="text-align:left;">
                                     <strong>Dual Channel DIBox</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">Indispensable tool in any concert or studio context</p>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4" style="text-align:justify;">Indispensable tool in any concert or studio context</p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/projects/dualdibox.html" class="btn btn-primary display-4">Coming soon!</a></div>
                             </div>
                         </div>
