--- a/pages/tools.html
+++ b/pages/tools.html
@@ -98,9 +98,9 @@
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
 
-                                <h5 class="card-title mbr-fonts-style display-5">
+                                <h5 class="card-title mbr-fonts-style display-5"  style="text-align:left;">
                                     <strong>MaxMSP</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">A Playground for Invention,<br>Max is an infinitely flexible space to create your own interactive software<br></p>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4" style="text-align:justify;">A Playground for Invention,<br>Max is an infinitely flexible space to create your own interactive software<br></p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/maxmsptools.html" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
@@ -118,9 +118,9 @@
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
 
-                                <h5 class="card-title mbr-fonts-style display-5">
+                                <h5 class="card-title mbr-fonts-style display-5" style="text-align:left;">
                                     <strong>Faust</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">Faust (Functional Audio Stream) is a functional programming language for sound synthesis and audio processing</p>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4" style="text-align:justify;">Faust (Functional Audio Stream) is a functional programming language for sound synthesis and audio processing</p>
                                 <div class="mbr-section-btn"><a href="" class="btn btn-primary display-4">Coming soon!</a></div>
                             </div>
                         </div>
