--- a/pages/learn.html
+++ b/pages/learn.html
@@ -99,9 +99,9 @@
                     <div class="row">
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
-                                <h5 class="card-title mbr-fonts-style display-5">
+                                <h5 class="card-title mbr-fonts-style display-5" style="text-align:left;">
                                     <strong>Storia della Musica Elettroacustica</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">dal 1948 alla Computer Music<br><br></p>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4" style="text-align:justify;">dal 1948 alla Computer Music<br><br></p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
@@ -118,7 +118,7 @@
                     <div class="row">
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
-                                <h5 class="card-title mbr-fonts-style display-5">
+                                <h5 class="card-title mbr-fonts-style display-5" style="text-align:left;">
                                     <strong>Laboratorio di Tecnologie Musicali</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4"><br><br></p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary display-4">Learn more</a></div>
