--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -148,7 +148,7 @@
               <div class="col-md-12 col-lg-9">
                   <div class="card-wrapper pb-4">
                       <div class="card-box align-center">
-                          <h4 class="card-title mbr-fonts-style mb-4 display-2">
+                          <h4 class="card-title mbr-fonts-style mb-4 display-2" style="text-align:center;">
                               <strong>Week 1</strong>
                           </h4>
                       </div>
@@ -249,7 +249,7 @@
               <div class="col-md-12 col-lg-9">
                   <div class="card-wrapper pb-4">
                       <div class="card-box align-center">
-                          <h4 class="card-title mbr-fonts-style mb-4 display-2">
+                          <h4 class="card-title mbr-fonts-style mb-4 display-2" style="text-align:center;">
                               <strong>Week 2</strong>
                           </h4>
                       </div>
