--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -300,14 +300,13 @@
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
-                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/inputs.maxpat">Inputs</a></li>
-                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/panning.maxpat">Panning</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/vibrato.maxpat">Vibrato</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/random.maxpat">Random</a></li>
                               <ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/random_numeri_casuali_per_bande.maxpat">Numeri Casuali per Bande</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/maschera_di_tendanza.maxpat">Maschera di Tendenza</a></li>
                             </ul>
-                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/maschera_di_tendanza.maxpat">Maschera di tendenza</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/panning.zip">Panning</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/week_2.maxpat">Week 2 - patch riassuntiva</a></li>
                             </ul>
                           </h5>
