--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -307,6 +307,7 @@
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/maschera_di_tendenza.maxpat">Maschera di Tendenza</a></li>
                             </ul>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/panning.zip">Panning</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/poly.zip">Poly</a></li>
                               <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_2/week_2.maxpat">Week 2 - patch riassuntiva</a></li>
                             </ul>
                           </h5>
